--- a/Unicode/Readme
+++ b/Unicode/Readme
@@ -3,7 +3,7 @@
 上 top; superior, highest; go up, send up
 帝 supreme ruler, emperor; god
 
-(( Shàngdì ))
+(( eloi ))
 
 
 https://bitcointalk.org/index.php?topic=38007.0
